--- a/ConsoleApplication15Working/ConsoleApplication15/ConsoleApplication15.csproj
+++ b/ConsoleApplication15Working/ConsoleApplication15/ConsoleApplication15.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Atom.cs" />
+    <Compile Include="CommandsWork.cs" />
+    <Compile Include="Molecule.cs" />
+    <Compile Include="Particle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
